clusters/cluster1/default/egress.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-fqdn: default-goldpinger-cluster1-1.tailf5f3d6.ts.net
  name: goldpinger-cluster1
spec:
  externalName: placeholder   # any value - will be overwritten by operator
  type: ExternalName
