clusters/cluster1/default/iperf-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iperf-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iperf-server
  template:
    metadata:
      labels:
        app: iperf-server
    spec:
      containers:
      - name: iperf-server
        image: networkstatic/iperf3
        args:
        - "-s"
        - "-p"
        - "5201"
        ports:
        - containerPort: 5201
          name: iperf
---
apiVersion: v1
kind: Service
metadata:
  name: iperf-server
  namespace: default
  labels:
    app: iperf-server
    tailscale.com/proxy-class: "prod"
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  ports:
  - port: 5201
    targetPort: 5201
    protocol: TCP
    name: iperf
  selector:
    app: iperf-server
